# A-Maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  config_invalid_42.txt  config_invalid_coords.txt  config_invalid_missing.txt  default_config.txt  display.py  generator.py  leaderboard.json  maze.txt  pyproject.toml  requirements.txt
config/: __init__.py  parser_config.py
mazegen/: __init__.py  generator.py
mlx/: __init__.py
test/: config_invalid_42.txt  config_invalid_bool.txt  config_invalid_bounds.txt  config_invalid_duplicate.txt  config_invalid_int.txt  config_invalid_unknown.txt
