[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A reusable maze generation module"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "jperez-s"},
    {name = "josjimen"}
]
dependencies = []

[tool.setuptools]
packages = ["mazegen"]

[tool.setuptools.package-data]
"*" = ["*.txt"]